[package]
name = "api-rest-rust"
description = "Simples api rest em rust usando axum"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [
  "Example <fabio@quarkapps.com>"
]

[dependencies]
axum = "0.7" # Specify version 0.7
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] } 
env_logger = "0.11.0"
log = "0.4"
futures = "0.3"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
mongodb = "3.4.1"

[workspace]